fix: correct spacing

--- a/src/app/help/help.module.scss
+++ b/src/app/help/help.module.scss
@@ -30,6 +30,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding: 0 0.5rem;
 }
 
 .step {
