--- a/src/app/planner/page.module.scss
+++ b/src/app/planner/page.module.scss
@@ -13,7 +13,7 @@
   border-radius: 30px;
   width: 375px;
   min-height: 744px;
-  padding: 0px 8px;
+  padding: 0px 1rem 1.5rem 1rem;
 }
 
 .plannerContainer {
