--- a/src/components/Overview/Overview.module.scss
+++ b/src/components/Overview/Overview.module.scss
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding-bottom: 1.5rem;
 }
 
 .card {
